link semua mp3 ssj

--- a/ssj/index.html
+++ b/ssj/index.html
@@ -68,7 +68,7 @@
 <a href="ssj/57%20Adeg%20-%20Adeg%20Kang%20Kaping%20Telu.mp3">Adeg_-_Adeg_Kang_Kaping_Telu</a>
 <a href="ssj/58%20Bab%202%20Teges%20-%20Teges%20Gegadhengan.mp3">Bab_2_Teges_-_Teges_Gegadhengan</a>
 <a href="ssj/59%20Adeg%20-%20Adeg%20Kang%20Kaping%20Papat.mp3">Adeg_-_Adeg_Kang_Kaping_Papat</a>
-<a href="ssj/60%20Bab%203%20Teges-%20Teges%20Kang%20Gegandhengan.mp3">Bab_3_Teges-_Teges_Kang_Gegandhengan</a>
+<a href="ssj/60%20Bab%203%20Teges-%20Teges%20Kang%20Gegandhengan.mp3"><Bab_3_Teges-_Teges_Kang_Gegandhengan/a>
 <a href="ssj/61%20Adeg%20-Adeg%20Kang%20Kaping%20Telu.mp3">Adeg_-Adeg_Kang_Kaping_Telu</a>
 <a href="ssj/62%20Bab%204%20Teges%20-Teges%20Kang%20Gegandhengan%20Kalawan.mp3">Bab_4_Teges_-Teges_Kang_Gegandhengan_Kalawan</a>
 <a href="ssj/63%20Adeg%20-%20Adeg%20Kang%20Kaping%20Telu.mp3">Adeg_-_Adeg_Kang_Kaping_Telu</a>
